Fix spacing on data-header

--- a/frontend/src/components/Grid/Grid.css
+++ b/frontend/src/components/Grid/Grid.css
@@ -43,7 +43,7 @@
     align-items: center;
     font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
     font-weight: bold;
-    height: 3%;
+    height: 4%;
 }
 .avail-container{
     position: relative;
